--- a/lab_4/src/app/products/product/product.component.css
+++ b/lab_4/src/app/products/product/product.component.css
@@ -1,66 +1,83 @@
-.product_container {
+.products-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    width: 100%;
     justify-content: center;
     padding: 20px;
-}
-
-.product_card {
-    width: 260px;
+    background: #f8f9fa;
+  }
+  
+  .product-card {
+    width: 250px;
     background: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    border: 1px solid #ddd;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ddd;
     padding: 15px;
-}
-
-.product_card img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 8px;
-}
-
-.product_card h3 {
-    font-size: 16px;
-    font-weight: bold;
-    color: #333;
     text-align: center;
-}
-
-.product_card p {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  
+  .product-image {
+    width: 80px ;
+    height: 120px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    object-fit: cover;
+  }
+  
+  .product-card h3 {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 8px;
+    font-weight: bold;
+  }
+  
+  .product-card p {
     font-size: 14px;
     color: #666;
-    text-align: center;
-}
-
-.product_card a {
-    color: #007bff;
-    text-decoration: none;
+    margin-bottom: 5px;
+  }
+  
+  .product-card p:last-child {
     font-weight: bold;
-}
-
-.product_card a:hover {
-    text-decoration: underline;
-}
-
-.product_card button {
+    color: #ff9800;
+  }
+  
+  .share-buttons {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: center;
+  }
+  
+  button {
+    width: 90%;
+    margin: 2px;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
     background: #007bff;
     color: white;
-    border: none;
-    padding: 8px 12px;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.product_card button:hover {
+  }
+  
+  button:hover {
     background: #0056b3;
-}
+  }
+  
+  .product-card a {
+    display: inline-block;
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: 14px;
+    color: #007bff;
+    font-weight: bold;
+  }
+  
+  .product-card a:hover {
+    color: #0056b3;
+  }
+  
