--- a/lab 2/instagram/style.css
+++ b/lab 2/instagram/style.css
@@ -3,28 +3,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #fafafa;
+    height: 750px;
+    background-color: white;
 }
-.container {
+.main_container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     gap: 30px;
 }
 .phone-mockup {
-    width: 380px;
-    height: 600px;
+    width: 50%;
+    height: 50%;
+    border: 1px solid #000;
+    margin-top: 500px;
 }
 .phone-mockup img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 .login-box {
-    background: #fff;
+    background: white;
     padding: 40px;
-    border: 1px solid #dbdbdb;
+    border: 1px solid grey;
     text-align: center;
     width: 350px;
     border-radius: 10px;
@@ -38,14 +39,14 @@ body {
     width: 100%;
     padding: 10px;
     margin: 8px 0;
-    border: 1px solid #dbdbdb;
+    border: 1px solid grey;
     border-radius: 5px;
     background-color: #fafafa;
 }
 .login-box button {
     width: 100%;
     padding: 10px;
-    background-color: #0095f6;
+    background-color: blue;
     color: white;
     border: none;
     border-radius: 5px;
@@ -57,19 +58,13 @@ body {
     align-items: center;
     margin: 15px 0;
 }
-.divider::before,
-.divider::after {
-    content: "";
-    flex: 1;
-    border-bottom: 1px solid #dbdbdb;
-}
 .divider span {
     margin: 0 10px;
-    color: #8e8e8e;
+    color: grey;
     font-weight: bold;
 }
 .fb-login {
-    color: #385185;
+    color: darkblue;
     font-weight: bold;
     display: block;
     margin: 10px 0;
@@ -77,7 +72,7 @@ body {
 .register {
     margin-top: 20px;
     padding: 15px;
-    border: 1px solid #dbdbdb;
+    border: 1px solid grey;
     text-align: center;
     background: white;
     border-radius: 10px;
