--- a/lab 2/facebook/style.css
+++ b/lab 2/facebook/style.css
@@ -8,9 +8,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     flex-direction: column;
 }
+.main_container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .container {
     display: flex;
     align-items: center;
